<resources>
    <string name="app_name">ABRP Transmitter</string>
    <string name="abrp_mail">ABRP token:</string>
    <string name="save">Save</string>
    <string name="transmit_data">Transmit data</string>
    <string name="saved">Settings saved successfully!</string>
    <string name="error_getting_ip">Error getting IP addresses.</string>
    <string name="error_reading_log">Error reading log file.</string>
    <string name="tab_settings">Settings</string>
    <string name="tab_logs">Logs</string>
    <string name="tab_information">Info</string>
    <string name="tab_abrp_geckoview">ABRP</string>
    <string name="no_wifi_ip">WiFi not connected.</string>
    <string name="token_missing">Transmitting data enabled but ABRP token missing.</string>
    <string name="last_error">Last error:</string>
    <string name="last_update_sent">Last update sent:</string>
    <string name="error_getting_tlm_object">Error getting telemetry object from service.</string>
    <string name="release">Release:</string>
    <string name="load_releases">Load releases</string>
    <string name="download_amp_install"><![CDATA[Download & Install]]></string>
    <string name="please_wait_logs">Please wait while loading logs...</string>
    <string name="please_wait_loading_releaes">Please wait, loading releases from GitHub...</string>
    <string name="choose_release">Choose a release</string>
    <string name="please_wait_downloading">Please wait, downloading</string>
    <string name="choose_release_first">Choose a release first</string>
    <string name="installing">Updating ABRP Transmitter, please restart app in about 30 seconds.</string>
    <string name="increase_abrp_buttons">Increase classic ABRP buttons size</string>
    <string name="log_level">Log level:</string>
    <string name="disable_tab_swipe">Disable tab swipe</string>
    <string name="abrp_url">ABRP Url:</string>
    <string name="update_error">Error installing update. See log for details.</string>
</resources>
